--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -251,13 +251,13 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There are no refunds processed so far" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TAs-F8-2B8">
-                                            <rect key="frame" x="16" y="70" width="343" height="15.666666666666671"/>
+                                            <rect key="frame" x="16" y="70" width="288" height="15.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pmp-AI-8g6" userLabel="Separator">
-                                            <rect key="frame" x="0.0" y="60.333333333333336" width="375" height="0.6666666666666643"/>
+                                            <rect key="frame" x="0.0" y="60.333333333333336" width="320" height="0.6666666666666643"/>
                                             <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="0.6666666666666714" id="Kih-m1-lCG"/>
@@ -291,13 +291,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issued by" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njx-Ce-cLp">
-                                                    <rect key="frame" x="269" y="14" width="62" height="17"/>
+                                                    <rect key="frame" x="214" y="14" width="62" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCt-v4-UbB">
-                                                    <rect key="frame" x="334" y="14" width="26" height="17"/>
+                                                    <rect key="frame" x="279" y="14" width="26" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -385,7 +385,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ys5-wA-l1o" userLabel="Separator">
-                                                    <rect key="frame" x="0.0" y="89.666666666666671" width="375" height="0.3333333333333286"/>
+                                                    <rect key="frame" x="0.0" y="89.666666666666671" width="320" height="0.3333333333333286"/>
                                                     <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="oIa-0J-Sgw"/>
@@ -607,30 +607,40 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issued by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iai-Ie-tFl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Issued by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iai-Ie-tFl">
                                 <rect key="frame" x="15" y="432.66666666666669" width="62" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Admin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0eT-8D-17T">
-                                <rect key="frame" x="79" y="432.66666666666669" width="44" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0eT-8D-17T">
+                                <rect key="frame" x="79" y="432.66666666666669" width="26" height="17"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="for proxy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uji-AK-6P5">
-                                <rect key="frame" x="125" y="432.66666666666669" width="58" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="for proxy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uji-AK-6P5">
+                                <rect key="frame" x="107" y="432.66666666666669" width="58" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#334455" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kGo-3v-0rs">
-                                <rect key="frame" x="185" y="432.66666666666669" width="65" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="#123" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kGo-3v-0rs">
+                                <rect key="frame" x="167" y="432.66666666666669" width="35" height="17"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7GD-CZ-NMe">
+                                <rect key="frame" x="287" y="426.66666666666669" width="72" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="View Proxy">
+                                    <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Htx-pV-C97" kind="presentation" identifier="ViewProxySegue" id="Hxa-gq-Ewb"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yu8-0e-Xzf" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="15" y="473.66666666666674" width="345" height="274.33333333333326"/>
                                 <subviews>
@@ -734,8 +744,10 @@
                             <constraint firstItem="jdj-iY-Cxt" firstAttribute="top" secondItem="q6z-cH-5GY" secondAttribute="bottom" constant="24" id="FkS-sP-5k8"/>
                             <constraint firstItem="jdj-iY-Cxt" firstAttribute="centerX" secondItem="XiF-2O-jJW" secondAttribute="centerX" id="K4B-a8-mcz"/>
                             <constraint firstItem="Uhk-AC-J3F" firstAttribute="leading" secondItem="XiF-2O-jJW" secondAttribute="leading" id="OZx-dg-hox"/>
+                            <constraint firstItem="7GD-CZ-NMe" firstAttribute="centerY" secondItem="kGo-3v-0rs" secondAttribute="centerY" id="PPQ-Gg-0YM"/>
                             <constraint firstItem="XiF-2O-jJW" firstAttribute="trailing" secondItem="yu8-0e-Xzf" secondAttribute="trailing" constant="15" id="PU2-7p-3RN"/>
                             <constraint firstItem="q6z-cH-5GY" firstAttribute="leading" secondItem="XiF-2O-jJW" secondAttribute="leading" id="RME-ai-MeL"/>
+                            <constraint firstItem="XiF-2O-jJW" firstAttribute="trailing" secondItem="7GD-CZ-NMe" secondAttribute="trailing" constant="16" id="Rf2-Ee-SbD"/>
                             <constraint firstItem="uIC-SA-dEa" firstAttribute="leading" secondItem="XiF-2O-jJW" secondAttribute="leading" id="RwJ-K2-Ey8"/>
                             <constraint firstItem="kGo-3v-0rs" firstAttribute="centerY" secondItem="uji-AK-6P5" secondAttribute="centerY" id="SIi-WY-HLf"/>
                             <constraint firstItem="iai-Ie-tFl" firstAttribute="leading" secondItem="XiF-2O-jJW" secondAttribute="leading" constant="15" id="TG8-bp-GwB"/>
@@ -767,6 +779,7 @@
                         <outlet property="proxyNumber" destination="kGo-3v-0rs" id="7ob-km-icx"/>
                         <outlet property="reasonTextView" destination="g25-MS-4J4" id="otU-q8-gau"/>
                         <outlet property="refundTitleLabel" destination="6sw-4N-2rz" id="aaF-G6-I6A"/>
+                        <outlet property="viewProxyButton" destination="7GD-CZ-NMe" id="tR4-e1-yAf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="scy-H3-7Sf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -939,6 +952,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jd2-Ah-Kg0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5287" y="112"/>
+        </scene>
+        <!--DashboardDetailsID-->
+        <scene sceneID="bCe-dO-Qd4">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Dashboard" referencedIdentifier="DashboardDetailsID" id="Htx-pV-C97" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TWp-Yx-m5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4870" y="522"/>
         </scene>
     </scenes>
     <resources>
